--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
       <div class="box b3"></div>
       <div class="box b4"></div>
     </section>
+    <section class="transform">
+      <h2>CSS Transform</h2>
+      <div class="box b1"></div>
+      <div class="box b2"></div>
+      <div class="box b3"></div>
+      <div class="box b4"></div>
+    </section>
   </div>
 </body>
 
