--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
       <div class="box b3"></div>
       <div class="box b4"></div>
     </section>
+    <section class="animation">
+      <h2>CSS Animation</h2>
+      <div class="box b1"></div>
+      <div class="box b2"></div>
+      <div class="box b3"></div>
+      <div class="box b4"></div>
+    </section>
   </div>
 </body>
 
